syntax = "proto2";

message flightConfig {
    required uint32 retrieval_timeout = 1;
    required uint64 max_flight_time = 2;
    required uint64 motor_speed = 3;
    required int32 telemetry_port = 4;
    required int32 command_port = 5;
    required uint64 flight_length = 6;
    required int32 heartbeat_timeout = 7;
    required string pod_driver = 8;
}
